# ukfuelfinder

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_2.0.0.md  SECURITY_AUDIT.md  UpdatedFuelPrice-1770228900031.csv  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  test_fetch_stations.py
.github/workflows/: publish.yml  tests.yml
.kiro/specs/api-changes-2025-02-17/: design.md  requirements.md  tasks.md
.kiro/specs/fuel-finder-api/: design.md  openapi.yaml  requirements.md  tasks.md
.kiro/specs/mft-field-removal/: design.md  requirements.md  tasks.md
.kiro/steering/: overview.md
docs/: README.md  info-recipent.en.json  openapi.json
examples/: api_migration.py  basic_usage.py  error_handling.py  fetch_all_sites.py  fetch_fuel_prices.py  global_config.py  location_search.py
tests/: conftest.py
tests/fixtures/: responses.py
tests/integration/: test_missing_prices.py  test_pagination.py  test_real_api.py
tests/unit/: test_auth.py  test_backward_compatibility.py  test_batch_404.py  test_cache.py  test_error_handling.py  test_global_config.py  test_http_client.py  test_location_search.py  test_models.py  test_rate_limiter.py
ukfuelfinder/: __init__.py  auth.py  cache.py  client.py  compatibility.py  config.py  exceptions.py  http_client.py  models.py  rate_limiter.py
ukfuelfinder/services/: __init__.py  forecourt_service.py  price_service.py
